--- a/index.html
+++ b/index.html
@@ -2,64 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
+    <meta
+      name="viewport"
+      content="widt
+    h=device-width, initial-scale=1.0"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <header class="container myone">
-      <h1><ins>welcome to My Hotel</ins></h1>
-      <div class="row menu-section">
-        <p>The best hotel in the city</p>
-      </div>
-      <div class="row">
-        <div class="col-8 content-section">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio, nam
-          ducimus ipsum rem maxime maiores dolore corrupti vero accusantium
-          dolorem corporis rerum? Nulla iusto eius obcaecati voluptates non amet
-          quae quos praesentium voluptatem facere, repellat provident tempore
-          beatae delectus eum cum similique inventore quas illum eaque et velit
-          optio est! Tempore veniam beatae optio molestias, voluptatem
-          cupiditate suscipit aliquid, blanditiis quas ducimus non reiciendis
-          amet distinctio commodi voluptas, fugit obcaecati excepturi hic cumque
-          maiores dolore eos quibusdam impedit sequi. Repudiandae laboriosam
-          nulla ad maiores consequatur repellat, exercitationem nemo
-          necessitatibus perspiciatis provident dolorum, et doloribus tempora,
-          excepturi beatae optio similique ipsa. Lorem ipsum dolor sit, amet
-          consectetur adipisicing elit. Molestiae maiores, voluptatem aperiam
-          pariatur esse mollitia eveniet fuga ipsam tempore repellendus
-          temporibus magni magnam reiciendis quae minus quod totam similique!
-          Nisi velit officia quisquam repellendus? Fugiat laudantium,
-          praesentium facere rerum iste obcaecati quidem ab sapiente eligendi
-          perferendis assumenda quas perspiciatis delectus placeat! Magnam
-          libero illum fugit, voluptatem perspiciatis explicabo recusandae
-          atque. Vero illum deserunt nobis doloremque accusamus necessitatibus
-          porro reiciendis quidem ipsa, pariatur explicabo! Neque iure aliquid
-          doloribus ex optio eum adipisci qui a labore eius, odio, quibusdam
-          impedit facere animi tenetur perferendis eligendi hic praesentium sint
-          voluptatibus ab nihil voluptas.
-        </div>
-        <div class="col-3 side-section">
-          <ul>
-            <li>Home</li>
-            <li>About Us</li>
-            <li>Contact</li>
-            <li>Career</li>
-            <li>Login</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <footer class="col-12">
-          <p>&copy designed and developed by syed Abdulla</p>
-        </footer>
-      </div>
+    <header class="header-class">
+      <h1>Heading</h1>
     </header>
   </body>
 </html>
